Done overhauling architecture - progress to userstories finalization - refactor near the end - ensure that the product now is functional